--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js"></script>
   </body>
 </html>
