--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/css/tabler.min.css" rel="stylesheet"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - SnickerBureau</title>
   </head>
@@ -11,5 +12,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js"></script>
+  </body>
   </body>
 </html>
